--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.2"
   }
 }
