--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
