--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.2"
